--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
@@ -33,6 +34,8 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.3",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -70,6 +73,8 @@
     "object-inspect": "^1.13.1",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "path-to-regexp": "^0.1.7",
     "picomatch": "^2.3.1",
     "proxy-addr": "^2.0.7",
